Final Latex Commit
Ben completed all of analysis/conclusion and Michael the intro/theory

--- a/Latex/abstract.tex
+++ b/Latex/abstract.tex
@@ -1,1 +1,1 @@
-in short. what is this
+Coaxial cables are one of the most common cables used for transmitting signals, used for over a century as the backbone of networking and for accurate information transfer. In this lab we investigate the transmittance of electrical waves down the cables and some of their properties. By exploring standing waves and pulsed waves in cables and we can look at how cable terminations affect signals and determine various characteristics of the cable. In this experiment we determine the characteristic impedance of a specific coaxial cable at $76.4\pm2.0\ \Omega $. We also calculate the the cable's inductance per unit length as $452.93\pm11.89$ nH m$^{-1}$ and capacitance per unit length as $77.597\pm2.037$ pF m$^{-1}$. The dielectric used in the cable was then determined to be polyethylene with a relative permittivity of $\epsilon_r = 2.2840 \pm 0.0358 $.
