--- a/Latex/conclusion.tex
+++ b/Latex/conclusion.tex
@@ -1,1 +1,7 @@
-what did we learn
+In this experiment we explored the transmission of electrical signals down a coaxial cable using two different methods: pulsed signals and standing wave resonances. The characteristic values of the coaxial cable were measured, including inductance and capacitance per unit length, the velocity of the travelling wave down the cable, the characteristic impedance, and the dielectric material used to insulate between the coaxial cylinders. \\
+
+The capacitance and inductance per unit length were measured to be, $L = 419.7 \pm 16.3$, $C = 60.55 \pm 2.36$ pF m$^{-1}$ and  $L = 452.93 \pm 11.89$ nH m$^{-1}$, $C = 77.597 \pm 2.037$ pF m$^{-1}$ using the standing wave and pulsed signal methods, respectively. The characteristic impedance was measured to be $Z_0 = 83.3 \pm 9.7 \ \Omega$ and $Z_0 = 76.4 \pm 2.0 \ \Omega$ with the same two methods, respectively. Using the standing wave method, the dielectric material separating the two coaxial cylinders was determined to be polyethylene with a relative permittivity of $\epsilon_r = 2.2840 \pm 0.0358$.\\
+
+Major sources of error include the uncertainty in the length of cable, assumed to be 60 m with an uncertainty of $\pm0.1$ m, observational error in determining the characteristic impedance when the reflected pulse amplitude reduces to approximately zero, and random errors while measuring the diameters of the inner and outer cylinders of the cable.  \\
+
+Between the two methods, the pulsed signal method is considered to be more accurate for calculating properties of the cables used, as values were measured directly and did not rely on theoretical models which ignore attenuation, and did not need to propagate errors through multiple calculations.\\
