--- a/Latex/config/config.tex
+++ b/Latex/config/config.tex
@@ -1,6 +1,7 @@
 \usepackage{fancyhdr} %for headers
 \usepackage[margin=1.0in]{geometry} % margin size (can change units)
 \usepackage{setspace} % setting spaces in title
+\usepackage{amssymb}
 
 \usepackage{cite} % for references
 
@@ -57,4 +58,7 @@
 \usepackage{mathtools}
 \DeclarePairedDelimiter\abs{\lvert}{\rvert}
 \DeclarePairedDelimiter\norm{\lVert}{\rVert}
+
+\newcommand{\e}[1]{\times10^{#1}}
+\usepackage[labelfont=bf]{caption}
 
