--- a/Latex/references.bib
+++ b/Latex/references.bib
@@ -1,5 +1,5 @@
 @online{pict_cable,
- author  = "Wikimedia Commons",
+ author  = {{Wikimedia Commons}},
  title   = "Cross-sectional view of a coaxial cable",
  year    = "2012",
  urlseen = "10-15-17",
@@ -26,4 +26,20 @@
   pages={422-424},
   author={Brown, T.B.},
   year={1954},
+}
+
+@online{dielectric,
+ author  = {{The Physics Hypertexbook}},
+ title   = "Dielectrics",
+ year    = "2017",
+ urlseen = "10-25-17",
+ url     = "https://physics.info/dielectrics/",
+}
+
+@online{lrc,
+ author  = {{Electronic Tutorials}},
+ title   = "Series Resonance Circuit",
+ year    = "2017",
+ urlseen = "10-25-17",
+ url     = "http://www.electronics-tutorials.ws/accircuits/series-resonance.html",
 }
